# rust-tinkering

axum-api/: Cargo.toml
builder/: Cargo.toml
builder/src/: main.rs
channels/: Cargo.toml
channels/src/: main.rs
drop/src/: main.rs
errors/: Cargo.toml
errors/src/: main.rs
metrics-playground/: Cargo.toml
metrics-playground/src/: main.rs
mp4/: Cargo.toml
mp4/src/: desc_reader.rs  main.rs  merge.rs  writer.rs
otel/: Cargo.toml  dice_server.rs
rpl-web-server/: 404.html  Cargo.toml
rpl-web-server/src/: lib.rs  main.rs
tracing-playground/: Cargo.toml
tracing-playground/src/: custom_layer.rs  main.rs
traits/src/: main.rs
zipper/: Cargo.toml
zipper/src/: main.rs
zipper/zipper/: 0.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
