[package]
name = "metrics-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
metrics = "0.21.1"
metrics-exporter-log = "0.4.0"
metrics-runtime = "0.13.1"
metrics_printer = "0.1.0"
simple_logger = "4.2.0"
